firmware/application/external/enhanced_drone_analyzer/build errors.txt
[ 97%] Building CXX object firmware/application/CMakeFiles/application.elf.dir/external/enhanced_drone_analyzer/enhanced_drone_analyzer_scanner_main.cpp.obj
/havoc/firmware/application/external/enhanced_drone_analyzer/enhanced_drone_analyzer_scanner_main.cpp:233:73: error: 'initialize_app' is not a member of 'ui::external_app::enhanced_drone_analyzer'; did you mean 'ui::external_app::enhanced_drone_analyzer::ScannerSettingsManager::initialize_app'?
  233 |     /*.externalAppEntry = */ ui::external_app::enhanced_drone_analyzer::initialize_app,
      |                                                                         ^~~~~~~~~~~~~~
/havoc/firmware/application/external/enhanced_drone_analyzer/enhanced_drone_analyzer_scanner_main.cpp:195:6: note: 'ui::external_app::enhanced_drone_analyzer::ScannerSettingsManager::initialize_app' declared here
  195 | void initialize_app(ui::NavigationView& nav) {
      |      ^~~~~~~~~~~~~~
cc1plus: warning: unrecognized command line option '-Wno-volatile'
make[2]: *** [firmware/application/CMakeFiles/application.elf.dir/build.make:5369: firmware/application/CMakeFiles/application.elf.dir/external/enhanced_drone_analyzer/enhanced_drone_analyzer_scanner_main.cpp.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:1337: firmware/application/CMakeFiles/application.elf.dir/all] Error 2
make: *** [Makefile:101: all] Error 2
Error: Process completed with exit code 2.